url value changed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Proqramlaşdırmanı olnine dərslər ilə öyrən - Javad Salman</title>
     <meta name="description" content="Cavad müəllim ilə onlayn proqramlaşdırma dərslərinə qoşulun. React dərsləri, Javascript dərsləri, Python dərsləri, Github dərsləri, Django dərsləri mövcuddur.">
     <meta name="author" content="Javad Salman">
-    <meta property="og:url"           content="https://javadsalman.github.io/portfolio/"/>
+    <meta property="og:url"           content="https://javadsalman.github.io/instructor-portfolio/"/>
 	<meta property="og:type"          content="website" />
 	<meta property="og:title"         content="Proqramlaşdırmanı olnine dərslər ilə öyrən - Javad Salman" />
 	<meta property="og:description"   content="Cavad müəllim ilə onlayn proqramlaşdırma dərslərinə qoşulun. React dərsləri, Javascript dərsləri, Python dərsləri, Github dərsləri, Django dərsləri mövcuddur." />
