--- a/index-original.html
+++ b/index-original.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/base.min.css">
     <link rel="stylesheet" href="css/vendor.min.css">
     <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css">
 
     <!-- script
     ================================================== -->
