link icons changed

--- a/index-original.html
+++ b/index-original.html
@@ -483,7 +483,7 @@
                         </div>
 
                         <a href="https://github.com/javadsalman/spotify-react-django-lesson-project" class="item-folio__project-link" title="Project link">
-                            <i class="icon-link"></i>
+                            <i class="fas fa-location-arrow"></i>
                         </a>
 
                         <div class="item-folio__caption">
@@ -513,7 +513,7 @@
                         </div>
 
                         <a href="https://javadsalman.github.io/market-app-vanilla-js/" class="item-folio__project-link" title="Project link">
-                            <i class="icon-link"></i>
+                            <i class="fas fa-location-arrow"></i>
                         </a>
 
                         <div class="item-folio__caption">
@@ -543,7 +543,7 @@
                         </div>
 
                         <a href="https://github.com/javadsalman/ecommerce-shop-site-lesson-project" class="item-folio__project-link" title="Project link">
-                            <i class="icon-link"></i>
+                            <i class="fas fa-location-arrow"></i>
                         </a>
 
                         <div class="item-folio__caption">
@@ -573,7 +573,7 @@
                         </div>
 
                         <a href="https://javadsalman.github.io/cosmos-lesson-project/" class="item-folio__project-link" title="Project link">
-                            <i class="icon-link"></i>
+                            <i class="fas fa-location-arrow"></i>
                         </a>
 
                         <div class="item-folio__caption">
@@ -603,7 +603,7 @@
                         </div>
 
                         <a href="https://github.com/javadsalman/k111-blog-project" class="item-folio__project-link" title="Project link">
-                            <i class="icon-link"></i>
+                            <i class="fas fa-location-arrow"></i>
                         </a>
 
                         <div class="item-folio__caption">
@@ -633,7 +633,7 @@
                         </div>
 
                         <a href="https://javadsalman.github.io/iphone-editor-lesson-project/" class="item-folio__project-link" title="Project link">
-                            <i class="icon-link"></i>
+                            <i class="fas fa-location-arrow"></i>
                         </a>
 
                         <div class="item-folio__caption">
@@ -663,7 +663,7 @@
                         </div>
 
                         <a href="https://github.com/javadsalman/k111-react-quiz-app" class="item-folio__project-link" title="Project link">
-                            <i class="icon-link"></i>
+                            <i class="fas fa-location-arrow"></i>
                         </a>
 
                         <div class="item-folio__caption">
@@ -693,7 +693,7 @@
                         </div>
 
                         <a href="https://javadsalman.github.io/timer-lesson-project/" class="item-folio__project-link" title="Project link">
-                            <i class="icon-link"></i>
+                            <i class="fas fa-location-arrow"></i>
                         </a>
 
                         <div class="item-folio__caption">
