seo image changed

--- a/index-original.html
+++ b/index-original.html
@@ -12,7 +12,7 @@
 	<meta property="og:type"          content="website" />
 	<meta property="og:title"         content="Proqramlaşdırmanı olnine dərslər ilə öyrən - Javad Salman" />
 	<meta property="og:description"   content="Cavad müəllim ilə onlayn proqramlaşdırma dərslərinə qoşulun. React dərsləri, Javascript dərsləri, Python dərsləri, Github dərsləri, Django dərsləri mövcuddur." />
-	<meta property="og:image"         content="https://javadsalman.github.io/instructor-portfolio/images/me-black-white.jpeg" />
+	<meta property="og:image"         content="https://javadsalman.github.io/instructor-portfolio/images/banner.png" />
 
     <!-- mobile specific metas
     ================================================== -->
