--- a/index-original.html
+++ b/index-original.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Proqramlaşdırmanı olnine dərslər ilə öyrən - Javad Salman</title>
+    <title>Proqramlaşdırmanı Online Dərslər ilə Öyrən - Cavad Salman</title>
     <meta name="description" content="Cavad müəllim ilə onlayn proqramlaşdırma dərslərinə qoşulun. React dərsləri, Javascript dərsləri, Python dərsləri, Github dərsləri, Django dərsləri mövcuddur.">
     <meta name="author" content="Javad Salman">
     <meta property="og:url"           content="https://javadsalman.github.io/instructor-portfolio/"/>
@@ -56,7 +56,7 @@
         <div class="header-logo">
             <a class="site-logo" href="index.min.html">
                 <i class="fas fa-code"></i>
-                <div>Javad Salman</div>
+                <div>Cavad Salman</div>
             </a>
         </div> <!-- end header-logo -->
 
@@ -71,7 +71,7 @@
                 <ul class="header-nav__list">
                     <li><a class="smoothscroll"  href="#home" title="giriş">Giriş</a></li>
                     <li><a class="smoothscroll"  href="#services" title="tədris paketləri">Tədris Paketləri</a></li>
-                    <li><a class="smoothscroll"  href="#about" title="metodikamız">Metodikamız</a></li>
+                    <li><a class="smoothscroll"  href="#about" title="metodikamız">Metodika</a></li>
                     <li><a class="smoothscroll"  href="#works" title="layiheler">Layihələr</a></li>
                     <li><a class="smoothscroll"  href="#contact" title="əlaqə">Əlaqə</a></li>
                 </ul>
@@ -119,12 +119,12 @@
 
             <div class="row home-content__main">
 
-                <h1>
-                Cavad Salman
+                <h1 class="home-title">
+                    Online <br> Proqramlaşdırma <br> Dərslərİ
                 </h1>
 
                 <h3>
-                Proqramçı və Təlimçi
+                Proqramçı və Təlimçi <br> <b>Cavad Salman</b> <br> tərəfindən
                 </h3>
 
                 <!-- <div class="home-content__video">
@@ -176,7 +176,7 @@
             <div class="col-full">
                 <h3 class="subhead">Təlimlərimiz</h3>
                 <h1 class="display-1">
-                    Aydın və dərinləməsinə nəzəriyyə, praktiki proyektlər və müasir dünya yanaşmalarına əsaslanan təlim paketlərindən özünüzə uyğun olanı seçin və hədəflərinizə çatmaq üçün birlikdə irəliləyək!
+                    Aydın və dərinləməsinə nəzəriyyə, praktiki proyektlər və müasir dünya yanaşmalarına əsaslanan təlim paketlərindən özünüzə uyğun olanını seçin və hədəflərinizə çatmaq üçün birlikdə irəliləyək!
                 </h1>
             </div>
         </div> <!-- end section-header -->
@@ -373,7 +373,7 @@
             <div class="col-full">
                 <h3 class="subhead">Metodikamız</h3>
                 <h1 class="display-1">
-                    Müasir həllər müasir yanaşmalar tələb edir. Proqramist olmağın yolu da məhz bu yanaşmaları mənimsəməkdən keçir. Elə bu səbəbdən bütün tədris paketlərində qeyd olunan metodologiyalardan aktiv istifadə edirik. 
+                    Müasir həllər müasir yanaşmalar tələb edir. Proqramist olmağın yolu da məhz bu yanaşmaları mənimsəməkdən keçir. Elə bu səbəbdən bütün tədris paketlərində aşağıda qeyd olunan metodologiyalardan aktiv istifadə edirik. 
                 </h1>
             </div>
         </div> <!-- end section-header -->
@@ -789,7 +789,7 @@
         <div class="row section-header narrow" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead">Əlaqə</h3>
-                <h1 class="display-1">İndi bu dəqiqə müraciət edin və çəkinmədən istədiyiniz sualı verin. Aşağıdakı linklərə klikləyərək əlaqəyə keçin</h1>
+                <h1 class="display-1">Qoşulmaq üçün müraciət edin və ya çəkinmədən istədiyiniz sualı soruşun. Aşağıdakı linklərdən birinə klikləmək kifayətdir</h1>
             </div>
         </div> <!-- end section-header -->
 
