some texts updated

--- a/index-original.html
+++ b/index-original.html
@@ -71,7 +71,7 @@
                 <ul class="header-nav__list">
                     <li><a class="smoothscroll"  href="#home" title="giriş">Giriş</a></li>
                     <li><a class="smoothscroll"  href="#services" title="tədris paketləri">Tədris Paketləri</a></li>
-                    <li><a class="smoothscroll"  href="#about" title="metodikamız">Metodika</a></li>
+                    <li><a class="smoothscroll"  href="#about" title="metodikamız">Metodikalar</a></li>
                     <li><a class="smoothscroll"  href="#works" title="layiheler">Layihələr</a></li>
                     <li><a class="smoothscroll"  href="#contact" title="əlaqə">Əlaqə</a></li>
                 </ul>
@@ -124,7 +124,7 @@
                 </h1>
 
                 <h3>
-                Proqramçı və Təlimçi <br> <b>Cavad Salman</b> <br> tərəfindən
+                Təcrübəli <br> Proqramçı və Təlimçi <br> <b>Cavad Salman</b> <br> tərəfindən
                 </h3>
 
                 <!-- <div class="home-content__video">
