upparcase text fixes

--- a/index-original.html
+++ b/index-original.html
@@ -120,7 +120,7 @@
             <div class="row home-content__main">
 
                 <h1 class="home-title">
-                    Online <br> Proqramlaşdırma <br> Dərslərİ
+                    ONLINE <br> PROQRAMLAŞDIRMA <br> DƏRSLƏRİ
                 </h1>
 
                 <h3>
@@ -174,7 +174,7 @@
 
         <div class="row section-header bit-narrow" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">Təlimlərimiz</h3>
+                <h3 class="subhead">TƏLİMLƏRİMİZ</h3>
                 <h1 class="display-1">
                     Aydın və dərinləməsinə nəzəriyyə, praktiki proyektlər və müasir dünya yanaşmalarına əsaslanan təlim paketlərindən özünüzə uyğun olanını seçin və hədəflərinizə çatmaq üçün birlikdə irəliləyək!
                 </h1>
@@ -371,7 +371,7 @@
 
         <div class="row section-header bit-narrow" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">Metodikamız</h3>
+                <h3 class="subhead">METODİKAMIZ</h3>
                 <h1 class="display-1">
                     Müasir həllər müasir yanaşmalar tələb edir. Proqramist olmağın yolu da məhz bu yanaşmaları mənimsəməkdən keçir. Elə bu səbəbdən bütün tədris paketlərində aşağıda qeyd olunan metodologiyalardan aktiv istifadə edirik. 
                 </h1>
@@ -720,7 +720,7 @@
 
         <div class="row section-header text-center narrow" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead">Fəxrlərimiz</h3>
+                <h3 class="subhead">FƏXRLƏRİMİZ</h3>
                 <h1 class="display-1">Məzun olmuş tələbələrin işlədiyi şirkətlər</h1>
             </div>
         </div> <!-- end section-header -->
