og description fixed

--- a/index-original.html
+++ b/index-original.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Cavad Salman">
     <meta property="og:url"           content="https://javadsalman.github.io/online-proqramlasdirma-dersleri/"/>
 	<meta property="og:type"          content="website" />
-	<meta property="og:title"         content="Proqramlaşdırmanı olnine dərslər ilə öyrən - Cavad Salman" />
+	<meta property="og:title"         content="Proqramlaşdırmanı Online Dərslər ilə Öyrən - Cavad Salman" />
 	<meta property="og:description"   content="Cavad müəllim ilə onlayn proqramlaşdırma dərslərinə qoşulun. React dərsləri, Javascript dərsləri, Python dərsləri, Github dərsləri, Django dərsləri mövcuddur." />
 	<meta property="og:image"         content="https://javadsalman.github.io/online-proqramlasdirma-dersleri/images/banner.png" />
 
